--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "morgan": "^1.10.0",
     "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
