--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@types/jest": "^29.5.5",
+    "@types/supertest": "^2.0.12",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "lodash.merge": "^4.6.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
