--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/supertest": "^2.0.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.4.0",
     "jest": "^29.7.0",
     "lodash.merge": "^4.6.2",
     "supertest": "^6.3.3",
