--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": false,
-    "lib": ["dom"],
+    "lib": ["ESNext"],
     "esModuleInterop": true,
     "declaration": true
   },
